Bug 1082178 - JS initialization must happen using the correct preferences in workers. r=khuey, a=lsblakk